src/test/deca/context/valid/created/sans_objet/while_rule.deca
// Auteur: Aymeric
//
// Historique:
//    cree le 10/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    boolean bool = true;
    while (bool) {
        println("cette phrase doit s'afficher une seule fois");
        bool = false;
    }
}